# csd_adventure_python

./: .flaskenv  .gitignore  README.md  csd_adventure.py  flask-app.service  pyproject.toml  requirements.txt  restart.sh  service.sh
.circleci/: config.yml
docs/improvements/: ideas_for_improvement.md
src/: __init__.py  routes.py
src/demo/: calc.py
src/loo/: adventure.py  inv.py
src/loo/colleagues/: pizza_the_hut.py
src/loo/items/: Clock.py  Command.py  Timeservice.py  coffeemaker.py  cutlery.py  dishwasher.py  item.py  shower.py
src/loo/rooms/: abstract_room.py  hallway.py  loo.py  room.py  wash_room.py
src/static/css/: game.css
src/static/js/: game.js
src/templates/: game.html  index.html
tests/: test_calc.py
tests/test_hallway/: test_hallway.py
tests/test_loo/: test_inv.py  test_jokes.py  test_toilet_paper.py
tests/test_loo/test_colleagues/: test_pizza_the_hut.py
tests/test_loo/test_items/: test_clock.py  test_coffeemaker.py  test_cutlery.py  test_dishwasher.py  test_shower.py
tests/test_loo/test_rooms/: test_loo.py  test_washroom.py
